--- a/www/index.html
+++ b/www/index.html
@@ -2383,7 +2383,7 @@
             new_contexts = new_contexts.concat(moving_context);
             new_contexts = new_contexts.concat(ui_contexts);
 
-            this.user_algorithm.contexts.push(new_contexst);
+            this.user_algorithm.contexts.push(new_contexts);
             this.render_contexts(ui_contexts);
         }
 
