--- a/www/index.html
+++ b/www/index.html
@@ -2369,7 +2369,7 @@
             new_contexts = new_contexts.concat(moving_context);
             new_contexts = new_contexts.concat(ui_contexts);
 
-            this.user_algorithm.contexts.push(new_contexts);
+            this.user_algorithm.contexts = new_contexts;
             this.render_contexts(new_contexts);
         }
         GlobalState.prototype.move_context_down = function (index) {
@@ -2383,7 +2383,7 @@
             new_contexts = new_contexts.concat(moving_context);
             new_contexts = new_contexts.concat(ui_contexts);
 
-            this.user_algorithm.contexts.push(new_contexts);
+            this.user_algorithm.contexts = new_contexts;
             this.render_contexts(new_contexts);
         }
 
