--- a/www/index.html
+++ b/www/index.html
@@ -1173,7 +1173,7 @@
         }
         var default_algorithm_program = {
             name: "template_webgl_program",
-            uniforms: [JSON.parse(JSON.stringify(default_opengl_uniform))],
+            uniforms: [JSON.parse(JSON.stringify(default_algorithm_uniform))],
             vert_code: "",
             vert_code: ""
         }
