--- a/www/index.html
+++ b/www/index.html
@@ -1174,7 +1174,7 @@
         var default_algorithm_program = {
             name: "template_webgl_program",
             uniforms: [JSON.parse(JSON.stringify(default_algorithm_uniform))],
-            vert_code: "",
+            frag_code: "",
             vert_code: ""
         }
 
