--- a/www/index.html
+++ b/www/index.html
@@ -2850,7 +2850,7 @@
                         lineWrapping: true
                     });
                     uniform_js_editor.getWrapperElement().id = uniform_identifier + '_js_code_codemirror';
-                    uniform_js_editor.setValue(program.uniform_js.exact_value);
+                    uniform_js_editor.setValue(uniform.value);
                     this.program_codemirrors[i].push(uniform_js_editor);
                 }
             }
