--- a/www/index.html
+++ b/www/index.html
@@ -2494,7 +2494,7 @@
                         '            <div class="col-6 col-sm-2 col-md-2 col-lg-2">\n' +
                         '                <div class="checkbox">\n' +
                         '                    <input style="float:right;" id="' + uniform_identifier + '_type_float" type="checkbox" value="">\n' +
-                        '                    <label for="' + uniform_identifier + '_type_"float></label>\n' +
+                        '                    <label for="' + uniform_identifier + '_type_float"></label>\n' +
                         '                </div>\n' +
                         '            </div>\n' +
                         '            <div class="col-6 col-sm-2 col-md-2 col-lg-2" style="align-self: flex-end; text-align: right">\n' +
