--- a/www/index.html
+++ b/www/index.html
@@ -2464,6 +2464,7 @@
                     var new_uniform_index = window.uniform_counter++;
                     var uniform = program.uniforms[j];
                     var uniform_identifier = program_identifier + "_uniform_" + new_uniform_index;
+                    this.user_algorithm.programs[i].uniforms[j].identifier = uniform_identifier;
                     uniform.identifier = uniform_identifier;
                     html += '    <div id="' + uniform_identifier + '" \n' +
                         '        style="margin:14px; padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">\n' +
