--- a/www/index.html
+++ b/www/index.html
@@ -2779,7 +2779,7 @@
                 this.program_codemirrors[i].push(frag_editor);
 
                 vert_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_vert_code'), {
-                    mode: "javascript",
+                    mode: "xml",
                     lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
