--- a/www/index.html
+++ b/www/index.html
@@ -2687,6 +2687,7 @@
                         '        </div>\n' +
                         '    </div>\n' +
                         '        <br>\n';
+                        '    </div>\n';
                 }
                 html += '        <div class="row">\n' +
                     '            <div class="col-12 col-sm-12 col-md-12 col-lg-12">\n' +
