--- a/www/index.html
+++ b/www/index.html
@@ -2686,6 +2686,7 @@
                         '            <br>\n' +
                         '        </div>\n' +
                         '    </div>\n' +
+                        '    </div>\n' +
                         '        <br>\n';
                 }
                 html += '        <div class="row">\n' +
