--- a/www/index.html
+++ b/www/index.html
@@ -2812,39 +2812,39 @@
                         uniform_identifier + '_type_sampler2d',
                         uniform_identifier + '_type_samplercube'], null);
                     
-                    if (uniform.type == opengl_dimension_types.FLOAT)
+                    if (uniform.type == opengl_uniform_types.FLOAT)
                         $("#" + uniform_identifier + '_type_float').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.INT)
+                    if (uniform.type == opengl_uniform_types.INT)
                         $("#" + uniform_identifier + '_type_int').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.BOOL)
+                    if (uniform.type == opengl_uniform_types.BOOL)
                         $("#" + uniform_identifier + '_type_bool').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.VEC_TWO)
+                    if (uniform.type == opengl_uniform_types.VEC_TWO)
                         $("#" + uniform_identifier + '_type_vec2').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.VEC_THREE)
+                    if (uniform.type == opengl_uniform_types.VEC_THREE)
                         $("#" + uniform_identifier + '_type_vec3').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.VEC_FOUR)
+                    if (uniform.type == opengl_uniform_types.VEC_FOUR)
                         $("#" + uniform_identifier + '_type_vec4').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.IVEC_TWO)
+                    if (uniform.type == opengl_uniform_types.IVEC_TWO)
                         $("#" + uniform_identifier + '_type_ivec2').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.IVEC_THREE)
+                    if (uniform.type == opengl_uniform_types.IVEC_THREE)
                         $("#" + uniform_identifier + '_type_ivec3').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.IVEC_FOUR)
+                    if (uniform.type == opengl_uniform_types.IVEC_FOUR)
                         $("#" + uniform_identifier + '_type_ivec4').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.BVEC_TWO)
+                    if (uniform.type == opengl_uniform_types.BVEC_TWO)
                         $("#" + uniform_identifier + '_type_bvec2').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.BVEC_THREE)
+                    if (uniform.type == opengl_uniform_types.BVEC_THREE)
                         $("#" + uniform_identifier + '_type_bvec3').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.BVEC_FOUR)
+                    if (uniform.type == opengl_uniform_types.BVEC_FOUR)
                         $("#" + uniform_identifier + '_type_bvec4').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.MAT_TWO)
+                    if (uniform.type == opengl_uniform_types.MAT_TWO)
                         $("#" + uniform_identifier + '_type_mat2').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.MAT_THREE)
+                    if (uniform.type == opengl_uniform_types.MAT_THREE)
                         $("#" + uniform_identifier + '_type_mat3').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.MAT_FOUR)
+                    if (uniform.type == opengl_uniform_types.MAT_FOUR)
                         $("#" + uniform_identifier + '_type_mat4').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.SAMPLER_TWO_D)
+                    if (uniform.type == opengl_uniform_types.SAMPLER_TWO_D)
                         $("#" + uniform_identifier + '_type_sampler2d').prop("checked", true);
-                    if (uniform.type == opengl_dimension_types.SAMPLERCUBE)
+                    if (uniform.type == opengl_uniform_types.SAMPLERCUBE)
                         $("#" + uniform_identifier + '_type_samplercube').prop("checked", true);
 
                     uniform_js_editor = CodeMirror.fromTextArea(document.getElementById(uniform_identifier + '_js_code'), {
