--- a/www/index.html
+++ b/www/index.html
@@ -1167,7 +1167,7 @@
         }
 
         var default_algorithm_uniform = {
-            type: opengl_dimension_types.FLOAT,
+            type: opengl_uniform_types.FLOAT,
             name: "template_Webgl_uniform",
             value: "return 0;"
         }
