--- a/www/index.html
+++ b/www/index.html
@@ -2947,39 +2947,39 @@
                 uniform.name = $("#" + uniform_identifier + '_name').val();
 
                 if ($("#" + uniform_identifier + '_type_float').prop("checked"))
-                    uniform.type = opengl_dimension_types.FLOAT;
+                    uniform.type = opengl_uniform_types.FLOAT;
                 if ($("#" + uniform_identifier + '_type_int').prop("checked"))
-                    uniform.type = opengl_dimension_types.INT;
+                    uniform.type = opengl_uniform_types.INT;
                 if ($("#" + uniform_identifier + '_type_bool').prop("checked"))
-                    uniform.type = opengl_dimension_types.BOOL;
+                    uniform.type = opengl_uniform_types.BOOL;
                 if ($("#" + uniform_identifier + '_type_vec2').prop("checked"))
-                    uniform.type = opengl_dimension_types.VEC_TWO;
+                    uniform.type = opengl_uniform_types.VEC_TWO;
                 if ($("#" + uniform_identifier + '_type_vec3').prop("checked"))
-                    uniform.type = opengl_dimension_types.VEC_THREE;
+                    uniform.type = opengl_uniform_types.VEC_THREE;
                 if ($("#" + uniform_identifier + '_type_vec4').prop("checked"))
-                    uniform.type = opengl_dimension_types.VEC_FOUR;
+                    uniform.type = opengl_uniform_types.VEC_FOUR;
                 if ($("#" + uniform_identifier + '_type_ivec2').prop("checked"))
-                    uniform.type = opengl_dimension_types.IVEC_TWO;
+                    uniform.type = opengl_uniform_types.IVEC_TWO;
                 if ($("#" + uniform_identifier + '_type_ivec3').prop("checked"))
-                    uniform.type = opengl_dimension_types.IVEC_THREE;
+                    uniform.type = opengl_uniform_types.IVEC_THREE;
                 if ($("#" + uniform_identifier + '_type_ivec4').prop("checked"))
-                    uniform.type = opengl_dimension_types.IVEC_FOUR;
+                    uniform.type = opengl_uniform_types.IVEC_FOUR;
                 if ($("#" + uniform_identifier + '_type_bvec2').prop("checked"))
-                    uniform.type = opengl_dimension_types.BVEC_TWO;
+                    uniform.type = opengl_uniform_types.BVEC_TWO;
                 if ($("#" + uniform_identifier + '_type_bvec3').prop("checked"))
-                    uniform.type = opengl_dimension_types.BVEC_THREE;
+                    uniform.type = opengl_uniform_types.BVEC_THREE;
                 if ($("#" + uniform_identifier + '_type_bvec4').prop("checked"))
-                    uniform.type = opengl_dimension_types.BVEC_FOUR;
+                    uniform.type = opengl_uniform_types.BVEC_FOUR;
                 if ($("#" + uniform_identifier + '_type_mat2').prop("checked"))
-                    uniform.type = opengl_dimension_types.MAT_TWO;
+                    uniform.type = opengl_uniform_types.MAT_TWO;
                 if ($("#" + uniform_identifier + '_type_mat3').prop("checked"))
-                    uniform.type = opengl_dimension_types.MAT_THREE;
+                    uniform.type = opengl_uniform_types.MAT_THREE;
                 if ($("#" + uniform_identifier + '_type_mat4').prop("checked"))
-                    uniform.type = opengl_dimension_types.MAT_FOUR;
+                    uniform.type = opengl_uniform_types.MAT_FOUR;
                 if ($("#" + uniform_identifier + '_type_sampler2d').prop("checked"))
-                    uniform.type = opengl_dimension_types.SAMPLER_TWO_D;
+                    uniform.type = opengl_uniform_types.SAMPLER_TWO_D;
                 if ($("#" + uniform_identifier + '_type_samplercube').prop("checked"))
-                    uniform.type = opengl_dimension_types.SAMPLERCUBE;
+                    uniform.type = opengl_uniform_types.SAMPLERCUBE;
 
                 uniform.value = this.program_codemirrors[program_index][j+2].getValue()
                 program_uniforms.push(uniform);
