--- a/www/index.html
+++ b/www/index.html
@@ -3168,7 +3168,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_shader" type="checkbox" value="">\n' +
-                    '                <label for="stage_shader"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_shader"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
@@ -3184,7 +3184,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_mesh_points" type="checkbox" value="">\n' +
-                    '                <label for="stage_mesh_points"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_mesh_points"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
@@ -3200,7 +3200,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_mesh_lines" type="checkbox" value="">\n' +
-                    '                <label for="stage_mesh_lines"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_mesh_lines"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
@@ -3216,7 +3216,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_mesh_line_strip" type="checkbox" value="">\n' +
-                    '                <label for="stage_mesh_line_strip"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_mesh_line_strip"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
@@ -3232,7 +3232,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_mesh_line_loop" type="checkbox" value="">\n' +
-                    '                <label for="stage_mesh_line_loop"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_mesh_line_loop"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
@@ -3248,7 +3248,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_mesh_triangles" type="checkbox" value="">\n' +
-                    '                <label for="stage_mesh_triangles"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_mesh_triangles"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
@@ -3264,7 +3264,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_mesh_triangle_fan" type="checkbox" value="">\n' +
-                    '                <label for="stage_mesh_triangle_fan"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_mesh_triangle_fan"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
@@ -3280,7 +3280,7 @@
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
                     '                <input style="float:right;" id="' + stage_identifier + '_stage_mesh_triangle_strip" type="checkbox" value="">\n' +
-                    '                <label for="stage_mesh_triangle_strip"></label>\n' +
+                    '                <label for="' + stage_identifier + '_stage_mesh_triangle_strip"></label>\n' +
                     '            </div>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: center;">\n' +
