--- a/www/index.html
+++ b/www/index.html
@@ -3179,7 +3179,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>MESH_POINTS</a>\n' +
+                    '            <a>Points</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
@@ -3195,7 +3195,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>MESH_LINES</a>\n' +
+                    '            <a>Lines</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
@@ -3211,7 +3211,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>MESH_LINE_STRIP</a>\n' +
+                    '            <a>Line Strip</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
@@ -3227,7 +3227,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>MESH_LINE_LOOP</a>\n' +
+                    '            <a>Line Loop</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
@@ -3243,7 +3243,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>MESH_TRIANGLES</a>\n' +
+                    '            <a>Triangles</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
@@ -3259,7 +3259,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>MESH_TRIANGLE_FAN</a>\n' +
+                    '            <a>Triangle Fan</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
@@ -3275,7 +3275,7 @@
                     '    <br>\n' +
                     '    <div class="row">\n' +
                     '        <div class="col-6 col-sm-6 col-md-6 col-lg-6" style="align-self: flex-end; text-align: right">\n' +
-                    '            <a>MESH_TRIANGLE_STRIP</a>\n' +
+                    '            <a>Triangle Strip</a>\n' +
                     '        </div>\n' +
                     '        <div class="col-2 col-sm-2 col-md-2 col-lg-2" style="text-align: left;">\n' +
                     '            <div class="checkbox">\n' +
